[package]
name = "orb"
version = "0.1.0"
edition = "2024"

[dependencies]
get_if_addrs = "0.5.3"
dirs = "6.0.0"
whoami = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
mdns-sd = "0.18.2"
tokio = { version = "1.50.0", features = ["full"] }
